--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
       href="https://fonts.googleapis.com/css2?family=Battambang:wght@100;300;400;700;900&display=swap"
       rel="stylesheet"
     />
+    <!-- boostrap -->
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Top Navbar -->
@@ -49,6 +54,55 @@
         </li>
       </ul>
     </div>
+    <!-- slide -->
+    <div class="slide-img">
+      <div class="container">
+        <div id="carouselExample" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="https://cdn.sabay.com/cdn/media.sabay.com/media/sabay-news/Srey-Sovandara/Srey-Sovandara4/6742555902f4f_1732400460_small.jpg"
+                class="d-block w-100"
+                alt="Slide 1"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="https://cdn.sabay.com/cdn/media.sabay.com/media/sabay-news/Srey-Sovandara/Srey-Sovandara4/6742555902f4f_1732400460_small.jpg"
+                class="d-block w-100"
+                alt="Slide 2"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="https://cdn.sabay.com/cdn/media.sabay.com/media/sabay-news/Srey-Sovandara/Srey-Sovandara4/6742555902f4f_1732400460_small.jpg"
+                class="d-block w-100"
+                alt="Slide 3"
+              />
+            </div>
+          </div>
+          <a
+            class="carousel-control-prev"
+            href="#carouselExample"
+            role="button"
+            data-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a
+            class="carousel-control-next"
+            href="#carouselExample"
+            role="button"
+            data-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+    </div>
+
     <!-- block content -->
     <div class="full-width-content">
       <div class="content-view-ads">
@@ -72,8 +126,7 @@
               </div>
               <div class="type-content">
                 <h4 class="type">កីឡា</h4>
-                <div class="conner-type">  
-                </div>
+                <div class="conner-type"></div>
               </div>
               <div class="date-content">
                 <p class="date">សុក្រ, 7ធ្នូរ 2024 11:11</p>
@@ -95,8 +148,7 @@
               </div>
               <div class="type-content">
                 <h4 class="type">កីឡា</h4>
-                <div class="conner-type">  
-                </div>
+                <div class="conner-type"></div>
               </div>
               <div class="date-content">
                 <p class="date">សុក្រ, 7ធ្នូរ 2024 11:11</p>
@@ -123,8 +175,7 @@
               </div>
               <div class="type-content">
                 <h4 class="type">កីឡា</h4>
-                <div class="conner-type">  
-                </div>
+                <div class="conner-type"></div>
               </div>
               <div class="date-content">
                 <p class="date">សុក្រ, 7ធ្នូរ 2024 11:11</p>
@@ -146,8 +197,7 @@
               </div>
               <div class="type-content">
                 <h4 class="type">កីឡា</h4>
-                <div class="conner-type">  
-                </div>
+                <div class="conner-type"></div>
               </div>
               <div class="date-content">
                 <p class="date">សុក្រ, 7ធ្នូរ 2024 11:11</p>
@@ -317,7 +367,8 @@
                 <div class="b-black-gre"></div>
               </div>
               <p class="caption-happy-left b-pink">
-                តស់!!! មកមើលមានអ្វីលេងខ្លះនៅមហោស្រពសិល្ប: បុណ្យភូមិមានជើង នៅខេត្តមណ្ឌលគិរី
+                តស់!!! មកមើលមានអ្វីលេងខ្លះនៅមហោស្រពសិល្ប: បុណ្យភូមិមានជើង
+                នៅខេត្តមណ្ឌលគិរី
               </p>
             </a>
           </div>
@@ -328,7 +379,8 @@
                 <div class="b-black-gre"></div>
               </div>
               <div class="caption-happy-right">
-                ចេញពីរោងកុនក្ដៅៗ...ខ្សែភាពយន្ដ រឿង"ប្រវត្ដិស្នេហ៍នាងនាថ" ប្រកាសដាក់បញ្ចាំងនៅលើ APP ហើយ!
+                ចេញពីរោងកុនក្ដៅៗ...ខ្សែភាពយន្ដ រឿង"ប្រវត្ដិស្នេហ៍នាងនាថ"
+                ប្រកាសដាក់បញ្ចាំងនៅលើ APP ហើយ!
               </div>
             </a>
             <a href="#" class="scale">
@@ -337,7 +389,8 @@
                 <div class="b-black-gre"></div>
               </div>
               <div class="caption-happy-right">
-                វត្តមានតារាថៃ ៥ដួង ក្នុងរឿង "ប្រមាញ់ព្រាយ២" មកកាន់ទឹកដីកម្ពុជា ធ្វើឱ្យអ្នកគាំទ្រពេញចិត្តស្តូកហ្មង!
+                វត្តមានតារាថៃ ៥ដួង ក្នុងរឿង "ប្រមាញ់ព្រាយ២" មកកាន់ទឹកដីកម្ពុជា
+                ធ្វើឱ្យអ្នកគាំទ្រពេញចិត្តស្តូកហ្មង!
               </div>
             </a>
             <a href="#" class="scale">
@@ -346,7 +399,8 @@
                 <div class="b-black-gre"></div>
               </div>
               <div class="caption-happy-right">
-                ចាយត្រឹម១៤០០០០ម៉ឺន ! អាចទៅលេងបុណ្យភូមិមានជើងនៅមណ្ឌលគិរី! សំខាន់គេងអូតែល និង នាំទៅដើរ លេងកន្លែងស្អាតៗទៀត
+                ចាយត្រឹម១៤០០០០ម៉ឺន ! អាចទៅលេងបុណ្យភូមិមានជើងនៅមណ្ឌលគិរី!
+                សំខាន់គេងអូតែល និង នាំទៅដើរ លេងកន្លែងស្អាតៗទៀត
               </div>
             </a>
             <a href="#" class="scale">
@@ -355,8 +409,8 @@
                 <div class="b-black-gre"></div>
               </div>
               <div class="caption-happy-right">
-                
-ភាពយន្តខ្លីពីរ «ឈូករ័ត្ន» និង«ចតុមុខ» ២០២៤ នឹងចាក់បង្ហាញឡើងវិញតាមខេត្ត!
+                ភាពយន្តខ្លីពីរ «ឈូករ័ត្ន» និង«ចតុមុខ» ២០២៤
+                នឹងចាក់បង្ហាញឡើងវិញតាមខេត្ត!
               </div>
             </a>
             <a href="#" class="scale">
@@ -365,7 +419,8 @@
                 <div class="b-black-gre"></div>
               </div>
               <div class="caption-happy-right">
-                រដ្ឋាភិបាលប្រទេសថៃ​ ព្យាយាមប្រើប្រាស់យុទ្ធសាស្ត្រ “Soft Power” តាមរយៈការផលិតខ្សែភាពយន្តដើម្បីផ្សព្វផ្សាយទៅកាន់ពិភពលោក
+                រដ្ឋាភិបាលប្រទេសថៃ​ ព្យាយាមប្រើប្រាស់យុទ្ធសាស្ត្រ “Soft Power”
+                តាមរយៈការផលិតខ្សែភាពយន្តដើម្បីផ្សព្វផ្សាយទៅកាន់ពិភពលោក
               </div>
             </a>
             <a href="#" class="scale">
@@ -374,7 +429,8 @@
                 <div class="b-black-gre"></div>
               </div>
               <div class="caption-happy-right">
-                អ្នកមណ្ឌលគិរី !! ត្រៀមខ្លួនជួបគ្នា បុណ្យភូមិមានជើង នឹងធ្វើដំណើរទៅដល់ថ្ងៃទី២២ ដល់ ថ្ងៃ២៤ ខែវិចិ្ឆកានេះហើយ!
+                អ្នកមណ្ឌលគិរី !! ត្រៀមខ្លួនជួបគ្នា បុណ្យភូមិមានជើង
+                នឹងធ្វើដំណើរទៅដល់ថ្ងៃទី២២ ដល់ ថ្ងៃ២៤ ខែវិចិ្ឆកានេះហើយ!
               </div>
             </a>
             <a href="#" class="scale">
@@ -392,7 +448,8 @@
                 <div class="b-black-gre"></div>
               </div>
               <div class="caption-happy-right">
-                All Of Us Are Dead រដូវកាលទី2 នឹងបង្ហាញឱ្យឃើញថាតើអ្នកណានឹងក្លាយជាតួចិត្តអាក្រក់ថ្មី
+                All Of Us Are Dead រដូវកាលទី2
+                នឹងបង្ហាញឱ្យឃើញថាតើអ្នកណានឹងក្លាយជាតួចិត្តអាក្រក់ថ្មី
               </div>
             </a>
           </div>
@@ -421,7 +478,8 @@
                 <div class="b-black-gre"></div>
               </div>
               <p class="caption-technology-left b-blue">
-                ដៃម្ខាងជិះម៉ូតូពិបាកប្រើ Google Maps មែនអត់? មួយក្បាច់នេះជួយអ្នកបាន
+                ដៃម្ខាងជិះម៉ូតូពិបាកប្រើ Google Maps មែនអត់?
+                មួយក្បាច់នេះជួយអ្នកបាន
               </p>
             </a>
           </div>
@@ -432,7 +490,8 @@
                 <div class="b-black-gre"></div>
               </div>
               <div class="caption-technology-right">
-                កុំភ្លេចមកទស្សនា ការប្រកួតប្រណាំងដ្រូន ស្នាដៃបង្កើតថ្មីដោយយុវជនកម្ពុជា នៅចុងសប្ដាហ៍នេះ
+                កុំភ្លេចមកទស្សនា ការប្រកួតប្រណាំងដ្រូន
+                ស្នាដៃបង្កើតថ្មីដោយយុវជនកម្ពុជា នៅចុងសប្ដាហ៍នេះ
               </div>
             </a>
             <a href="#" class="scale">
@@ -441,7 +500,8 @@
                 <div class="b-black-gre"></div>
               </div>
               <div class="caption-technology-right">
-                វាសនាលិចអណ្ដែតៗពីឡានអេតចាយ ២០០ដុល្លារ ទៅជាស្ដេចឡានតម្លៃ ៦លានដុល្លារ
+                វាសនាលិចអណ្ដែតៗពីឡានអេតចាយ ២០០ដុល្លារ ទៅជាស្ដេចឡានតម្លៃ
+                ៦លានដុល្លារ
               </div>
             </a>
             <a href="#" class="scale">
@@ -468,7 +528,8 @@
                 <div class="b-black-gre"></div>
               </div>
               <div class="caption-technology-right">
-                ព្រឹត្តិការណ៍ Lotus Legacy: The Spirit of Racing បង្ហាញពីអនាគតរថយន្តដ៏ប្រណិត Lotus Eletre
+                ព្រឹត្តិការណ៍ Lotus Legacy: The Spirit of Racing
+                បង្ហាញពីអនាគតរថយន្តដ៏ប្រណិត Lotus Eletre
               </div>
             </a>
             <a href="#" class="scale">
@@ -477,7 +538,8 @@
                 <div class="b-black-gre"></div>
               </div>
               <div class="caption-technology-right">
-                អ្វីទៅអ៊ីនធឺណិតផ្កាយរណប ហើយខុសពីអ៊ីនធឺណិតយើងប្រើរាល់ថ្ងៃដូចម្ដេចខ្លះ?
+                អ្វីទៅអ៊ីនធឺណិតផ្កាយរណប
+                ហើយខុសពីអ៊ីនធឺណិតយើងប្រើរាល់ថ្ងៃដូចម្ដេចខ្លះ?
               </div>
             </a>
             <a href="#" class="scale">
@@ -486,7 +548,8 @@
                 <div class="b-black-gre"></div>
               </div>
               <div class="caption-technology-right">
-                យុគ្គសម័យថ្មីនៃការផ្សងព្រេង: ពិធីសម្ភាធន៍ទីតាំងលក់រថយន្ត Jeep® & RAM
+                យុគ្គសម័យថ្មីនៃការផ្សងព្រេង: ពិធីសម្ភាធន៍ទីតាំងលក់រថយន្ត Jeep® &
+                RAM
               </div>
             </a>
             <a href="#" class="scale">
@@ -524,7 +587,8 @@
                 <div class="b-black-gre"></div>
               </div>
               <p class="caption-life-left b-green">
-                ធនាគារ វីង ចូលរួមអបអរព្រឹត្តិការណ៍វប្បធម៌ដ៏ផូរផង់របស់កម្ពុជាក្នុងព្រះរាជពិធីបុណ្យអុំទូក
+                ធនាគារ វីង
+                ចូលរួមអបអរព្រឹត្តិការណ៍វប្បធម៌ដ៏ផូរផង់របស់កម្ពុជាក្នុងព្រះរាជពិធីបុណ្យអុំទូក
               </p>
             </a>
           </div>
@@ -535,7 +599,8 @@
                 <div class="b-black-gre"></div>
               </div>
               <div class="caption-life-right">
-                ល្បែង​លេង​កាល​ពី​តូចៗ សឹង​ភ្លេច​ទៅ​ហើយ ត្រូវ​បាន​គាស់​មក​លេង​ជា​ថ្មី មើល​ហើយ​នឹក​កុមារភាព!
+                ល្បែង​លេង​កាល​ពី​តូចៗ សឹង​ភ្លេច​ទៅ​ហើយ
+                ត្រូវ​បាន​គាស់​មក​លេង​ជា​ថ្មី មើល​ហើយ​នឹក​កុមារភាព!
               </div>
             </a>
             <a href="#" class="scale">
@@ -553,7 +618,8 @@
                 <div class="b-black-gre"></div>
               </div>
               <div class="caption-life-right">
-                មកដឹងពី មូលហេតុដែលនាំឲ្យមានការជួសជុលរង្វង់មូលដំរី៥ ទៅជាដំរី៥០៥ ក្នុងស្រុកវាលវែង ខេត្តពោធិ៍សាត់
+                មកដឹងពី មូលហេតុដែលនាំឲ្យមានការជួសជុលរង្វង់មូលដំរី៥ ទៅជាដំរី៥០៥
+                ក្នុងស្រុកវាលវែង ខេត្តពោធិ៍សាត់
               </div>
             </a>
             <a href="#" class="scale">
@@ -562,7 +628,8 @@
                 <div class="b-black-gre"></div>
               </div>
               <div class="caption-life-right">
-                ចំណាត់ថ្នាក់ប្រទេសផឹកស្រាខ្លាំងជាងគេទាំង ១០ នៅអាស៊ាន ឡាវ ជាប់លេខ១ ចំណែកកម្ពុជាជាប់លេខ ៤
+                ចំណាត់ថ្នាក់ប្រទេសផឹកស្រាខ្លាំងជាងគេទាំង ១០ នៅអាស៊ាន ឡាវ
+                ជាប់លេខ១ ចំណែកកម្ពុជាជាប់លេខ ៤
               </div>
             </a>
             <a href="#" class="scale">
@@ -580,7 +647,8 @@
                 <div class="b-black-gre"></div>
               </div>
               <div class="caption-life-right">
-                អ្នកចូលចិត្តវិស័យថតរូបកុំរំលងថ្ងៃទី ២១-២៤ ខែវិច្ឆិកា ឆ្នាំ ២០២៤ការបើកសម្ពោធជាផ្លូវការ របស់មហោស្រពរូប...
+                អ្នកចូលចិត្តវិស័យថតរូបកុំរំលងថ្ងៃទី ២១-២៤ ខែវិច្ឆិកា ឆ្នាំ
+                ២០២៤ការបើកសម្ពោធជាផ្លូវការ របស់មហោស្រពរូប...
               </div>
             </a>
             <a href="#" class="scale">
@@ -627,7 +695,8 @@
                 <div class="b-black-gre"></div>
               </div>
               <p class="caption-sport-left b-yellow">
-                មរតក​ក្បាច់​គុន​ខ្មែរ​ នឹង​បង្ហាញ​ខ្លួន​នៅ​ទឹក​ដី​នៃ​ដើម​កំណើត​កីឡា​អូឡាំពិក​ដំបូង​គឺ​ប្រទេស​ក្រិក​...
+                មរតក​ក្បាច់​គុន​ខ្មែរ​
+                នឹង​បង្ហាញ​ខ្លួន​នៅ​ទឹក​ដី​នៃ​ដើម​កំណើត​កីឡា​អូឡាំពិក​ដំបូង​គឺ​ប្រទេស​ក្រិក​...
               </p>
             </a>
           </div>
@@ -638,7 +707,9 @@
                 <div class="b-black-gre"></div>
               </div>
               <div class="caption-sport-right">
-                តំណាង​ NOCC៖​ យើង​រួម​គ្នា​បង្ហាញ​កិត្យានុភាព​ក្បាច់​គុន​ខ្មែរ​ក្នុង​កម្មវិធី​គុន​ខ្មែរ​ពិភពលោក​ លើក...
+                តំណាង​ NOCC៖​
+                យើង​រួម​គ្នា​បង្ហាញ​កិត្យានុភាព​ក្បាច់​គុន​ខ្មែរ​ក្នុង​កម្មវិធី​គុន​ខ្មែរ​ពិភពលោក​
+                លើក...
               </div>
             </a>
             <a href="#" class="scale">
@@ -656,7 +727,8 @@
                 <div class="b-black-gre"></div>
               </div>
               <div class="caption-sport-right">
-                Manchester City ​រៀបចំ​កុង​ត្រា​របស់​ Haaland ​ជា​មួយ​ថ្លៃ​ពលកម្ម​ថ្លៃ​បំផុត​នៅ EPL
+                Manchester City ​រៀបចំ​កុង​ត្រា​របស់​ Haaland
+                ​ជា​មួយ​ថ្លៃ​ពលកម្ម​ថ្លៃ​បំផុត​នៅ EPL
               </div>
             </a>
             <a href="#" class="scale">
@@ -665,7 +737,8 @@
                 <div class="b-black-gre"></div>
               </div>
               <div class="caption-sport-right">
-                អ្​ឃើញ​ជោគជ័យ​នៅ Sporting តែ​​​មក​ដល់​បិសាច​ក្រហម Ruben Amorim បាន​ប្រាក់ខែ​ថោក​ជាង​ Ten Hag ទេ​​
+                អ្​ឃើញ​ជោគជ័យ​នៅ Sporting តែ​​​មក​ដល់​បិសាច​ក្រហម Ruben Amorim
+                បាន​ប្រាក់ខែ​ថោក​ជាង​ Ten Hag ទេ​​
               </div>
             </a>
             <a href="#" class="scale">
@@ -683,7 +756,9 @@
                 <div class="b-black-gre"></div>
               </div>
               <div class="caption-sport-right">
-                រថយន្ត​ OFF ROAD ជាតិ-អន្តរជាតិ​ នឹង​ធ្វើ​ឲ្យ​កក្រើក​ខេត្ត​ព្រះសីហនុ​ ២៨ ​វិច្ឆិកា ដល់ ១ ធ្នូ​ ឆ្នាំ...
+                រថយន្ត​ OFF ROAD ជាតិ-អន្តរជាតិ​
+                នឹង​ធ្វើ​ឲ្យ​កក្រើក​ខេត្ត​ព្រះសីហនុ​ ២៨ ​វិច្ឆិកា ដល់ ១ ធ្នូ​
+                ឆ្នាំ...
               </div>
             </a>
             <a href="#" class="scale">
@@ -701,7 +776,8 @@
                 <div class="b-black-gre"></div>
               </div>
               <div class="caption-sport-right">
-                ក្រុម​តេក្វាន់ដូ ITF ​ក្រសួង​មហាផ្ទៃ៖​ សមត្ថភាព​មិន​ធម្មតា​ជាប់​ចំណាត់ថ្នាក់​លេខ១​ រហូត​ ២ដង​ជាប់​គ្...
+                ក្រុម​តេក្វាន់ដូ ITF ​ក្រសួង​មហាផ្ទៃ៖​
+                សមត្ថភាព​មិន​ធម្មតា​ជាប់​ចំណាត់ថ្នាក់​លេខ១​ រហូត​ ២ដង​ជាប់​គ្...
               </div>
             </a>
           </div>
@@ -824,5 +900,9 @@
         </div>
       </div>
     </div>
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </body>
 </html>
